🔧 简化vercel.json配置，优化Vercel部署

--- a/vercel.json
+++ b/vercel.json
@@ -1,112 +1,10 @@
 {
-  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
   "functions": {
     "app/api/**/*.ts": {
-      "maxDuration": 60,
-      "memory": 1024
-    },
-    "app/api/ai/**/*.ts": {
-      "maxDuration": 300,
-      "memory": 1024
-    },
-    "app/api/documents/upload.ts": {
-      "maxDuration": 180,
-      "memory": 1024
-    },
-    "app/api/reports/generate.ts": {
-      "maxDuration": 300,
-      "memory": 1024
+      "maxDuration": 60
     }
   },
-  "crons": [
-    {
-      "path": "/api/cron/update-legal-db",
-      "schedule": "0 2 * * *"
-    },
-    {
-      "path": "/api/cron/cleanup-sessions",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/cron/generate-reports",
-      "schedule": "0 6 * * 1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "origin-when-cross-origin"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
-        }
-      ]
-    }
-  ],
-  "redirects": [
-    {
-      "source": "/dashboard",
-      "destination": "/",
-      "permanent": false
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/webhooks/:path*",
-      "destination": "/api/webhooks/:path*"
-    }
-  ],
-  "regions": ["iad1"],
-  "github": {
-    "enabled": true,
-    "autoAlias": true,
-    "silent": false
-  },
-  "git": {
-    "deploymentEnabled": {
-      "main": true
-    }
-  },
-  "env": {
-    "NODE_ENV": "production",
-    "DEPLOYMENT_TRIGGER": "2025-01-29",
-    "VERCEL_AUTO_DEPLOY": "enabled",
-    "FORCE_REDEPLOY": "true"
-  }
+  "regions": ["iad1"]
 }
