--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
+    "@auth/core": "^0.34.2",
+    "@auth/prisma-adapter": "^1.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@huggingface/inference": "^2.7.0",
     "@prisma/client": "^6.10.1",
@@ -72,10 +73,10 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.21.1",
     "next-intl": "^4.3.1",
     "next-themes": "^0.4.4",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^6.9.8",
     "prisma": "^6.10.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
